--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate-react",
+  "name": "learning-redux-saga",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,9 +23,7 @@
     "eject": "react-scripts eject",
     "lint": "react-scripts lint --max-warnings=0",
     "prepare": "husky install",
-    "generate": "yarn plop --plopfile ./generators/plopfile.js",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "generate": "yarn plop --plopfile ./generators/plopfile.js"
   },
   "husky": {
     "hooks": {
@@ -67,12 +65,6 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.3.12",
-    "@storybook/addon-essentials": "^6.3.12",
-    "@storybook/addon-links": "^6.3.12",
-    "@storybook/node-logger": "^6.3.12",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.12",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/prettier": "^2.4.1",
