--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
     "jest": "^27.3.1",
     "jest-styled-components": "^7.0.6",
     "react": "^17.0.2",
@@ -25,7 +26,8 @@
     "eject": "react-scripts eject",
     "lint": "react-scripts lint --max-warnings=0",
     "prepare": "husky install",
-    "generate": "yarn plop --plopfile ./generators/plopfile.js"
+    "generate": "yarn plop --plopfile ./generators/plopfile.js",
+    "server": "json-server server.json -p 3333"
   },
   "husky": {
     "hooks": {
@@ -85,6 +87,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "husky": "^7.0.4",
+    "json-server": "^0.17.0",
     "lint-staged": "^11.2.6",
     "prettier": "^2.4.1"
   }
